# knowledge-assistant

./: .gitignore  FAQs.md  README.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-space.yml
backend/: README.space.md  app_space.py  conftest.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/app/db/: store.py  wiki_store.py
backend/app/routers/: chat.py  knowledge.py  models.py  wiki.py
backend/app/services/: actions.py  context_builder.py  corpus.py  drafter.py  ingestion.py  openrouter.py  sync.py  target_builder.py  wiki_seed.py
backend/corpus/: backup-battery-comparison.md  x340-engine-notes.md
backend/tests/: test_actions.py  test_auth.py  test_chat.py  test_config.py  test_context_builder.py  test_corpus.py  test_drafter.py  test_health.py  test_ingestion.py  test_knowledge_api.py  test_models.py  test_space_entry.py  test_startup.py  test_store.py  test_sync.py  test_target_builder.py  test_wiki_api.py  test_wiki_proposals.py  test_wiki_seed.py  test_wiki_store.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/app/: chat-navigation.ts  composer-actions.ts  nav.ts  shell.test.tsx  shell.tsx  wiki-navigation.ts
frontend/src/components/assistant-ui/: attachment.test.tsx  composer-trigger-popover.tsx  markdown-text.tsx  pdf-export-action.tsx  thread-list.tsx  thread.tsx
frontend/src/lib/: pdf-export.ts  time.ts
frontend/src/test/: setup.ts
(+70 files in other folders)
