[project]
name = "knowledge-assistant-backend"
version = "0.1.0"
description = "Knowledge Assistant API — OpenRouter proxy on a Hugging Face Space"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.60",
    "gradio>=5.0",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
